objects/Contact/fields/Contact_Sync_d_with_EQAI__c.field-meta.xml
<CustomField>
    <fullName>Contact_Sync_d_with_EQAI__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Contact Sync'd with EQAI</label>
    <type>Checkbox</type>
</CustomField>