objects/Contact/fields/COR2_Portal_Contact__c.field-meta.xml
<CustomField>
    <fullName>COR2_Portal_Contact__c</fullName>
    <defaultValue>false</defaultValue>
    <label>COR2 Portal Contact</label>
    <type>Checkbox</type>
</CustomField>