objects/Contact/fields/EQAI_Contact_Id__c.field-meta.xml
<CustomField>
    <fullName>EQAI_Contact_Id__c</fullName>
    <label>EQAI Contact Id</label>
    <length>18</length>
    <type>Text</type>
</CustomField>