objects/Contact/fields/EQAI_Created_By__c.field-meta.xml
<CustomField>
    <fullName>EQAI_Created_By__c</fullName>
    <label>EQAI Created By</label>
    <length>100</length>
    <type>Text</type>
</CustomField>