objects/Contact/fields/EQAI_Last_Modified_By__c.field-meta.xml
<CustomField>
    <fullName>EQAI_Last_Modified_By__c</fullName>
    <label>EQAI Last Modified By</label>
    <length>100</length>
    <type>Text</type>
</CustomField>