objects/Contact/fields/New_Hire_Request__c.field-meta.xml
<CustomField>
    <fullName>New_Hire_Request__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>New Hire Request</label>
    <referenceTo>New_Hire_Request__c</referenceTo>
    <relationshipLabel>Contacts</relationshipLabel>
    <relationshipName>Contacts</relationshipName>
    <type>Lookup</type>
</CustomField>