objects/Contact/fields/Temp_Text__c.field-meta.xml
<CustomField>
    <fullName>Temp_Text__c</fullName>
    <label>Temp Text</label>
    <length>255</length>
    <type>Text</type>
</CustomField>