objects/Contact/validationRules/Prevent_Account_Change.validationRule-meta.xml
<ValidationRule>
    <fullName>Prevent_Account_Change</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
    ISCHANGED(AccountId),
    RecordType.Name= 'Contacts',
    NOT(ISBLANK(AccountId))
)</errorConditionFormula>
    <errorMessage>You must create a new contact to change the account.</errorMessage>
</ValidationRule>