objects/Contact/validationRules/Prevent_User_to_Edit_EQAI_fields.validationRule-meta.xml
<ValidationRule>
    <fullName>Prevent_User_to_Edit_EQAI_fields</fullName>
    <active>false</active>
    <errorConditionFormula>AND(
	$Profile.Name = 'System Administrator',
	OR(
            AND(
   ISNEW() ,OR(NOT ( ISBLANK( EQAI_Contact_Id__c )),NOT( ISBLANK( EQAI_Created_By__c ) ),NOT( ISBLANK( EQAI_Last_Modified_By__c ) ))  ), 
ISCHANGED( EQAI_Contact_Id__c ) ,
	   ISCHANGED( EQAI_Created_By__c ) ,
	   ISCHANGED( EQAI_Last_Modified_By__c )
	)
)</errorConditionFormula>
    <errorMessage>EQAI Contact Id, EQAI Created By, EQAI Last Modified By cannot be modified.</errorMessage>
</ValidationRule>