objects/Contact/listViews/ACV_Contacts.listView-meta.xml
<ListView>
    <fullName>ACV_Contacts</fullName>
    <columns>FULL_NAME</columns>
    <columns>ACCOUNT.NAME</columns>
    <columns>CONTACT.TITLE</columns>
    <columns>CONTACT.PHONE1</columns>
    <columns>CONTACT.PHONE3</columns>
    <columns>CONTACT.EMAIL</columns>
    <columns>CONTACT.REPORTS_TO.NAME</columns>
    <columns>CONTACT.DEPARTMENT</columns>
    <columns>Status__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>ACCOUNT.NAME</field>
        <operation>equals</operation>
        <value>ACV Enviro</value>
    </filters>
    <label>ACV Contacts</label>
</ListView>